// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Club/Club Details Basic Club 1`] = `
<div
  data-testid="clubdetail"
>
  <p>
    Club name: 
    Knaphill
  </p>
  <p>
    Club address: 
    dummy street, dummy town, DD333MY
  </p>
</div>
`;

exports[`Storyshots Components/Club/Club Details Basic Templated Club 1`] = `
<div
  data-testid="clubdetail"
>
  <p>
    Club name: 
    Knaphill
  </p>
  <p>
    Club address: 
    my address
  </p>
</div>
`;

exports[`Storyshots Components/Club/Club Details Club with Logo 1`] = `
<div
  data-testid="clubdetail"
>
  <p>
    Club name: 
    Woking
  </p>
  <p>
    Club address: 
    dummy street, dummy town, DD333MY
  </p>
</div>
`;

exports[`Storyshots Components/Club/Club Details Container Basic Club one 1`] = `
<p>
  club details loading
</p>
`;

exports[`Storyshots Components/Club/Club Details Container Basic Club two 1`] = `
<p>
  club details loading
</p>
`;

exports[`Storyshots Components/Club/Club Details Container Basic Templated Club Details 1`] = `
<p>
  club details loading
</p>
`;

exports[`Storyshots Components/Club/Club Details Container Unknown Club 1`] = `
<p>
  club details loading
</p>
`;

exports[`Storyshots Components/Club/Club Link Basic Club Link 1`] = `
<ul>
  <li
    className="InActiveClub"
  >
    <a
      href="/club/knaphill-fc"
      onClick={[Function]}
    >
      Knaphill
    </a>
  </li>
</ul>
`;

exports[`Storyshots Components/Club/Club Link List Basic Club Link List 1`] = `
<ul>
  <ul
    data-testid="search-club-list"
  >
    <li
      className=""
    >
      <a
        href="/club/knaphill-fc"
        onClick={[Function]}
      >
        Knaphill
      </a>
    </li>
    <li
      className="InActiveClub"
    >
      <a
        href="/club/sutton-utd"
        onClick={[Function]}
      >
        Sutton Utd
      </a>
    </li>
  </ul>
</ul>
`;

exports[`Storyshots Components/Routes/Site Routes Club Page 1`] = `
<p>
  club details loading
</p>
`;

exports[`Storyshots Components/Routes/Site Routes Club Page Not Found 1`] = `
<p>
  club details loading
</p>
`;

exports[`Storyshots Components/Routes/Site Routes Default 1`] = `
<p>
  club details loading
</p>
`;

exports[`Storyshots Components/Routes/Site Routes Page Not Found 1`] = `
<p
  data-testid="not-found"
>
  Page Not Found
</p>
`;
